2018-03-11 1.3.4 Failsafe delta for ffmpeg: do not restart if but X seconds remain

2018-02-27 1.3.3 Extending TV Browser support (plugin v.1.0.3 required)
                 Events can also be canceled

2018-02-25 1.3.2 Extending TV Browser support (with newest plugin)
                 Events to be recorded are marked in TVBrowser and shown in tree view

2018-02-13 1.3.1 Fix for TV Browser records
                 Fix for importing m3u files with utf8bom encoding

2017-01-19 1.3.0 Support for TV-Browser added. Please see tvbrowser.org for more details
                 GZip packed local XMLTV files can be read
                 Password-free IP mask added into advanced configuration
                 Fix for login on iOS devices
                 Logout link added

2016-04-06 1.2.7 Fix for table switches
                 Fix for overnight records using EPG chart

2016-04-01 1.2.6 Fix for switches being unswitched
                 Fix for table data being purged

2016-03-28 1.2.5 DSM 6.0 hotfix

2016-03-24 1.2.4 XMLTV Support for non-standard fields                 

2016-01-21 1.2.3 Recurrent records fixed

2016-01-03 1.2.2 Fixed switches

2015-12-11 1.2.1 Several bug fixes

2015-12-10 1.2.0 EPG zoom redesigned and moved to EPG chart page
                 Further theme support for tables
                 EPG grab is now deprecated and will be completely removed in a future version, XMLTV should be the only way for now
                 Some unneeded redirects and reloads removed
                 Some visual and layout improvements
                 Keyword tag for EPG list added (for example /epglist&UFO should always show all events with 'UFO')
                 Saving such URL as a favorite allows a quick access. Extended support may be added later.
                 Dependencies updated:
                    - jQuery
                    - jQuery Mobile
                    - DataTables
                    - CherryPy