@@ -35,7 +35,8 @@
     "Interface language (default='english')": "Sprache des Webinterfaces (Vorgabe='english')",
     "Date/time locale (default='default')": "Lokalisierung für Datum / Uhrzeit (Vorgabe='default')",
     
-    "Lenghten an EPG-record (delta before and after), [minutes]": "EPG Aufnahme verlängern um (vor und nach) [Minuten]",
+    "Lenghten an EPG-record (delta before), [minutes]": "EPG Aufnahme verlängern um (vor) [Minuten]",
+    "Lenghten an EPG-record (delta after), [minutes]": "EPG Aufnahme verlängern um (nach) [Minuten]",
     "Enable XMLTV import": "XMLTV-Import einschalten",
     "Initial path for an XMLTV import": "Suchpfad für XMLTV-Import",
     "Time shift for XMLTV data (in hours)": "Zeitverschiebung für die XMLTV-Daten (in Stunden)",
