@@ -35,7 +35,8 @@
     "Interface language (default='english')": "Язык интерфейса (по умолчанию=english)",
     "Date/time locale (default='default')": "Локализация времени и даты (по умолчанию=default)",
 
-    "Lenghten an EPG-record (delta before and after), [minutes]": "Продлевать EPG записи на (до и после) [мин.])",
+    "Lenghten an EPG-record (delta before), [minutes]": "Продлевать EPG записи на (до) [мин.])",
+    "Lenghten an EPG-record (delta after), [minutes]": "Продлевать EPG записи на (после) [мин.])",
     "Enable XMLTV import": "Включить XMLTV-импорт",
     "Initial path for an XMLTV import": "Адрес для XMLTV-импорта",
     "Time shift for XMLTV data (in hours)": "Сдвиг во времени данных XMLTV (в часах)",
