@@ -1,5 +1,6 @@
 %include ('create.tpl')
-<div id="delta_for_epg" delta="{{delta}}"></div>
+<div id="delta_before_epg" delta="{{deltab}}"></div>
+<div id="delta_after_epg" delta="{{deltaa}}"></div>
 <div id="users-contain" class="ui-widget">
     <div id="chartheader">
         <h1>
